[package]
name = "xrp-viewer"
version = "0.2.0"
edition = "2021"

[dependencies]
# Для парсинга аргументов командной строки
clap = { version = "4.5", features = ["derive"] }
# Для HTTP-запросов
reqwest = { version = "0.12", features = ["json"] }
# Для сериализации/десериализации JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
# Для работы с Base58 (валидация адресов)
base58 = "0.2"
# Для вычисления CRC32 (контрольная сумма)
crc32fast = "1.3"
# Асинхронный runtime
tokio = { version = "1.47.1", features = ["full"] }
# Логирование
log = "0.4"
env_logger = "0.11"
# Обработка ошибок
anyhow = "1.0"
thiserror = "2.0.12"
# Для загрузки переменных окружения из .env файла
dotenv = "0.15"